@@ -4,6 +4,9 @@ CHANGE LOG
 
 Changes up to 0.95
 
+   * fixed problem with view matrix exploding on some proteins -- now
+     allow front clipping plane to go negative with suitable protections.
+
    * fixed bug with raytracing transparent surfaces using 
      intermediate backgrounds
 
